--- a/.github/workflows/check-k504.yml
+++ b/.github/workflows/check-k504.yml
@@ -38,7 +38,7 @@ jobs:
       with:
         token: ${{ secrets.GH_TOKEN }}
         event-type: Compile-auto
-        client-payload: '{"kernel_version": "5.4.1", "kernel_auto": "true", "auto_build": "true", "rm_release": "false"}'
+        client-payload: '{"kernel_version": "5.4.1", "kernel_auto": "true", "auto_build": "true"}'
 
     - name: Delete workflow runs
       uses: Mattraks/delete-workflow-runs@v2
