--- a/.github/workflows/check-k510.yml
+++ b/.github/workflows/check-k510.yml
@@ -6,8 +6,8 @@ env:
 
 on:
   workflow_dispatch:
-    # schedule:
-    #   - cron: 30 17 * * *
+    schedule:
+      - cron: 30 17 * * *
 
 jobs:
   check:
@@ -37,7 +37,7 @@ jobs:
       with:
         token: ${{ secrets.GH_TOKEN }}
         event-type: Compile-auto
-        client-payload: '{"kernel_version": "5.10.1", "kernel_auto": "true", "auto_build": "false", "rm_release": "true"}'
+        client-payload: '{"kernel_version": "5.10.1", "kernel_auto": "true", "auto_build": "false"}'
 
     - name: Delete workflow runs
       uses: Mattraks/delete-workflow-runs@v2
